src/test/ui/error-codes/E0778.rs
#![feature(isa_attribute)]

#[instruction_set()] //~ ERROR
fn no_isa_defined() {
}

fn main() {
}
